# Lab-Project-FreeRTOS-FAT

./: .gitmodules  CMakeLists.txt  History2.txt  README.md  ff_crc.c  ff_dev_support.c  ff_dir.c  ff_error.c  ff_fat.c  ff_file.c  ff_format.c  ff_ioman.c  ff_locking.c  ff_locking.org.c  ff_memory.c  ff_stdio.c  ff_string.c  ff_sys.c  ff_time.c
.github/: .cSpellWords.txt  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml  uncrustify.yml
include/: FreeRTOSFATConfigDefaults.h  FreeRTOS_errno_FAT.h  ff_crc.h  ff_devices.h  ff_dir.h  ff_error.h  ff_fat.h  ff_fatdef.h  ff_file.h  ff_format.h  ff_headers.h  ff_ioman.h  ff_locking.h  ff_memory.h  ff_old_config_defines.h  ff_stdio.h  ff_string.h  ff_sys.h  ff_time.h
portable/: CMakeLists.txt  README_DRIVER_DISCLAIMER.txt
portable/ATSAM4E/: ff_sddisk.c  ff_sddisk_r.c
portable/STM32F4xx/: ff_sddisk.c  stm32f4xx_hal_sd.c  stm32f4xx_hal_sd.h  stm32f4xx_ll_sdmmc.c  stm32f4xx_ll_sdmmc.h
portable/STM32F7xx/: ff_sddisk.c  stm32f7xx_hal_sd.c  stm32f7xx_hal_sd.h
portable/Zynq/: ff_sddisk.c  xsdps.c  xsdps.h  xsdps_g.c  xsdps_hw.h  xsdps_info.c  xsdps_info.h  xsdps_options.c  xsdps_sinit.c
portable/Zynq.2019.3/: ff_sddisk.c  xsdps.c  xsdps.h  xsdps_g.c  xsdps_hw.h  xsdps_info.c  xsdps_info.h  xsdps_options.c  xsdps_sinit.c
portable/avr32_uc3/: ff_flush.c  ff_flush.h  ff_locking.c
portable/common/: ff_ramdisk.c  ff_ramdisk.h  ff_sddisk.h
portable/linux/: ff_sddisk.c
portable/lpc18xx/: ff_sddisk.c
test/: CMakeLists.txt
test/build-combination/: CMakeLists.txt  README.md
test/build-combination/Common/: main.c
test/build-combination/Common/include/: FreeRTOSConfig.h
test/build-combination/DefaultConf/: FreeRTOSFATConfig.h
test/unit-test/: .gitignore  CMakeLists.txt  README.md  cmock_build.cmake  ff_file_utest.c  ff_ioman_utest.c
test/unit-test/config/: FreeRTOSFATConfig.h
test/unit-test/include/: FreeRTOS.h  FreeRTOSConfig.h  event_groups.h  semphr.h  task.h
tools/cmock/: coverage.cmake  create_test.cmake  project.yml
